...
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_mood"
    android:fillViewport="true"
    tools:ignore="contentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
...
        android:background="#222121"
        tools:ignore="contentDescription">


        <ImageButton
            android:contentDescription="@string/Emptydec"
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="48dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#222121"
            android:scaleType="fitCenter"
...
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emojiScrollView"
            app:layout_constraintVertical_bias="0.031" />

        <EditText
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
...
            android:textColor="#FDFAFA"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reasoning"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateButton"
            app:layout_constraintVertical_bias="0.022" />

        <ImageButton
            android:id="@+id/alone_social"
            android:contentDescription="@string/alone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@null"
...
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@id/private_question"
            app:layout_constraintTop_toBottomOf="@id/alone_social" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#3F51B5"
            android:fontFamily="@font/inter"
            android:text="@string/submit"
...
