<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#222121"
    android:id="@+id/test4">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"/>

    <!-- Skip Button -->
    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#222121"
        android:fontFamily="@font/amatica_sc_bold"
        android:text="SKIP"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <!-- Next Button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/amatica_sc_bold"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="NEXT"
        android:textColor="#000000"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Swipe to see next mood"
        android:layout_marginStart="115dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom|start"
        android:textColor="#908484">

    </TextView>


</FrameLayout>